Fixed a problem where the height of the grid was too big

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ button {
   justify-content: center; /* Centra el contenido horizontalmente dentro del contenedor */
   align-items: center; /* Centra el contenido verticalmente dentro del contenedor */
   width: 100%;
-  max-width: 40%;
+  max-width: 35%;
   
 }
 
